examples/semantic_error1.sf
dfa automataExample {
  initial q0;
  state q1;
  final q2;

  on q0->q1 when "1";
  on q1->q2 when "2";
  on q2->q0 when "3"; // error
}

fn main(input) {
  automataExample <- input;
}
